# git-odyssey

./: .gitignore  .tmuxinator.yml  README.md  blog.md  docker-compose.yml  initial_proposal.md  install.sh  package.json  skills-lock.json  start.sh
backend/: .dockerignore  Dockerfile.app  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
backend/src/: .env.example  aitest.py  bootstrap_schema.py  coreaitest.py  main.py  test.py
backend/src/api/: api_model.py  dependencies.py
backend/src/api/routers/: admin.py  auth.py  chat.py  desktop.py  filter.py  ingest.py  repo.py  (+3 more)
backend/src/app/: __init__.py
backend/src/core/: ai.py  ast_extractor.py  branch.py  embedder.py  reader.py  repo.py  retriever.py  writer.py
backend/src/data/: __init__.py  adapter.py  data_model.py  database.py  schema.py
backend/src/infrastructure/: ai_clients.py  ai_runtime.py  db.py  errors.py  migrations.py  schema.py  settings.py
backend/src/services/: auth_service.py  chat_service.py  filter_service.py  github_service.py  ingest_service.py  repo_service.py  review_service.py  review_session_service.py  secrets_service.py  security_service.py  summarize_service.py
backend/src/utils/: logger.py  prompts.py  utils.py
backend/tests/: test_ai_clients.py  test_ai_engine.py  test_ast_extractor.py  test_chat_service.py  test_desktop_mode.py  test_embedder.py  test_filter_retriever.py  test_ingest_jobs.py  test_local_repo_ingest.py  test_repo_router.py  test_review_router.py  test_review_service.py  test_review_session_service.py  test_settings.py  test_utils.py
(+230 files in other folders)
